@@ -36,6 +36,9 @@ p a:hover, li a:hover, blockquote a:hover, .hlink:hover { color: #444; }
 
 /* COOKIES */
 #cookie-popup {
-    background-color: #fff;
+    background-color: #FFF;
     border-color: #000;
 }
+
+/* DROPDOWN */
+.dropdown-content { background-color: #FFF; }
